--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>my pet project</title>
+    <link rel="icon" href="">
     <link rel="stylesheet" href="{% static 'core/css/index.css' %}?v=6">
     <link rel="stylesheet" href="{% static 'core/css/null-style.css' %}">
     {% block head %}
